objects/Release_Deliverable_Contributor__c.object
<CustomObject>
    <fields>
        <fullName>Contributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contributor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Deliverable_Contributors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deliverable_Name__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deliverable Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_Deliverable_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Release Deliverable ID</label>
        <referenceTo>Release_Deliverable__c</referenceTo>
        <relationshipLabel>Release Deliverable Contributors</relationshipLabel>
        <relationshipName>Release_Deliverable_Contributors</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Deliverable_Name__c</fullName>
        <formula>Release_Deliverable_ID__r.Release_Deliverable_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Release Deliverable Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Name__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Member_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Team Member ID</label>
        <referenceTo>Core_Team_Member__c</referenceTo>
        <relationshipLabel>Release Deliverable Contributors</relationshipLabel>
        <relationshipName>Release_Deliverable_Contributors</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Member_Name__c</fullName>
        <formula>Team_Member_ID__r.User__r.Last_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Member Name</label>
        <type>Text</type>
    </fields>
    <label>Release Deliverable Contributor</label>
    <nameField>
        <displayFormat>RDC-{0000}</displayFormat>
        <label>Release Deliverable Contributor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Release Deliverable Contributors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>